# v2-modern-step5-master

./: .env.template  Guia.md  README.md  pyproject.toml
app/: rag_chain.py  server.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
rag-data-loader/: rag_load_and_process.py
