[tool.poetry]
name = "v2-modern-step5"
version = "5.0.0"
description = "Modern RAG Step 5: MultiQuery & Chat History (2025)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langchain-experimental = "^0.3.0"
tqdm = "^4.66.0"
unstructured = {extras = ["all-docs"], version = "^0.16.0"}
tiktoken = "^0.8.0"
psycopg = "^3.2.0"
pgvector = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"